Added test to t/message.t
prove t/message.t
t/message.t .. 1/131 # Test 131 got: <UNDEF> (t/message.t at line 500)
t/message.t .. Failed 1/131 subtests

Test Summary Report
-------------------
t/message.t (Wstat: 0 Tests: 131 Failed: 1)
  Failed test:  131
Files=1, Tests=131,  0 wallclock secs ( 0.02 usr  0.00 sys +  0.09 cusr  0.00 csys =  0.11 CPU)
Result: FAIL

prove -b t/message.t
t/message.t .. ok
All tests successful.
Files=1, Tests=131,  1 wallclock secs ( 0.03 usr  0.01 sys +  0.09 cusr  0.00 csys =  0.13 CPU)
Result: PASS

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Michael Houghton (1):
     Modified HTTP::Message::new to check $content to see if it is a ref.
     Use the content_ref method to add $content in properly if it is a ref.
     This addresses issue #13 in GitHub
+    Test added to t/message.t that fails in 6.06
 
 _______________________________________________________________________________
 2015-04-23 HTTP-Message 6.07
