--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for HTTP-Message
 
+
+    - converted all uses of Test.pm to Test::More
+
+
 6.08   2015-07-10
     - Resolve new uninitialized warning from
       HTTP::Request::Common::request_type_with_data (RT#105787)
