switch uses of like(..., qr/.../m) back to ok( ... =~ ) due to incompatibility in 5.8.x
see https://metacpan.org/pod/perl5101delta#Other-incompatible-changes
and http://www.cpantesters.org/cpan/report/f15016a0-2de3-11e5-99ef-54c3deb78640

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for HTTP-Message
 
+
+    - fix uses of qr/.../m in tests that do not work in 5.8.x
+
 6.09   2015-07-19
 
     - converted all uses of Test.pm to Test::More
