If an object is passed to HTTP::Request, it must provide a canonical()
I ran into this issue today when I tried to GET a Mojo::URL object.  No
error was thrown until HTTP::Request tried to call the canonical()
method on the object.  So, just checking if an object provides a
scheme() method is not enough.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - If an object is passed to HTTP::Request, it must provide a canonical()
+      method (Olaf Alders)
 
 6.11   2015-09-09
     - fix an undefined value warning in HTTP::Headers::as_string
