treat undef headers as the empty string
fixes the issue described at http://www.jwz.org/blog/2015/09/more-lwp-bit-rot/

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for HTTP-Message
 
+    - fix an undefined value warning in HTTP::Headers::as_string
+
 6.10   2015-07-19
 
     - fix uses of qr/.../m in tests that do not work in 5.8.x
