Update the changes list

--- a/Changes
+++ b/Changes
@@ -3,6 +3,9 @@ Revision history for HTTP-Message
 {{$NEXT}}
     - If an object is passed to HTTP::Request, it must provide a canonical()
       method (Olaf Alders)
+    - Make sure status messages don't die by checking the status exists before
+      checking the value range (Kent Frederic, GH #39)
+    - Added a .mailmap file to clean up the contributors list
 
 6.11   2015-09-09
     - fix an undefined value warning in HTTP::Headers::as_string
