--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for HTTP-Message
 
+{{$NEXT}}
+
 6.14      2017-12-20 22:28:48Z
     - Add some useful examples in HTTP::Request (GH #92) (Chase Whitener).
       Batch requests are now explained.
