Document status code 451 and add to cachable_by_default (#104)
* Fix typo in comment

* Document status code 451 in the list of constants

See GH#103.

* Add status code 451 to cachable by default list

This conforms to [RFC 725](https://tools.ietf.org/html/rfc7725).

Update `status.t` to check that status code 451 is cachable by
default.

* Perltidy is_cachable by default

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - Documented status code 451 in the list of constants (Robert Rothenberg)
+    - Status code 451 is cachable by default, as per RFC 7725 (Robert Rothenberg)
     - Add default status_message for unknown status codes (GH#105) (Robert Rothenberg)
 
 6.16      2018-03-28 14:09:17Z
