Add support for RFC 8187 encoded filenames in Content-Disposition
Fixes <https://github.com/libwww-perl/HTTP-Message/issues/86>.

Rewrites `HTTP::Response->filename` method:

- Use `Try::Tiny` instead of `eval` block.
- Assign capturing groups using list context.
- Make documentation explicit that the encoding is `locale_fs`.
- Run Perltidy on `filename` method.

HTTP::Response test:

- RFC 8187 tests require the `utf8` pragma to ensure that the test file
  is read as UTF-8.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - Add support for RFC 8187 encoded filenames (GH#115) (Zaki Mughal)
 
 6.18      2018-06-05 16:29:15Z
     - Revert status_message to original code (GH#111) (Theo van Hoesel)
