--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - Bump Encode to latest version (3.01) (GH#129) (Olaf Alders)
+    - Revert #115 (GH#131) (Olaf Alders)
+    - Revert (GH#125) "try hard to make a usable file name" (GH#130) (Olaf
+      Alders)
     - Fix JSON request encoding examples in POD (GH#126) (Michael Schout)
 
 6.20      2019-02-05 01:46:39Z (TRIAL RELEASE)
