--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for HTTP-Message
 
+{{$NEXT}}
+
 6.21      2020-02-19 14:35:09Z (TRIAL RELEASE)
     - Bump Encode to latest version (3.01) (GH#129) (Olaf Alders)
     - Revert #115 (GH#131) (Olaf Alders)
