increment $VERSION after 6.22 release

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for HTTP-Message
 
+{{$NEXT}}
+
 6.22      2020-02-24 18:58:07Z
     - Full release.  No changes since TRIAL release 6.21
 
