--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - Enable static install (GH#134) (Olaf Alders)
 
 6.22      2020-02-24 18:58:07Z
     - Full release.  No changes since TRIAL release 6.21
