--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for HTTP-Message
 
+{{$NEXT}}
+
 6.24      2020-05-11 13:15:25Z
     - Full release.  No changes since TRIAL release 6.23
 
