--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@ Revision history for HTTP-Message
 
 {{$NEXT}}
     - Don't run Changes test on master in GH actions
+    - move Clone from required to suggests prerequisite, to re-enable
+      fatpacking
 
 6.24      2020-05-11 13:15:25Z
     - Full release.  No changes since TRIAL release 6.23
