--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - Update comment which explains in which RFC 451 is defined (GH#143) (Olaf
+      Alders). Reported by Toby Inkster.
 
 6.25      2020-06-28 17:52:12Z
     - Don't run Changes test on master in GH actions
