--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - Clean up backcompat code (GH#148) (Dan Book)
 
 6.26      2020-09-10 02:34:25Z
     - Update comment which explains in which RFC 451 is defined (GH#143) (Olaf
