Fix test writing to files
There were situation when test write to local directory instead of /tmp
file. This is bad practice in testing.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - Fix test writing to files (GH#156) (Michal Josef Špaček)
 
 6.30      2021-05-10 14:55:55Z
     - Don't inherit from Exporter anymore (GH#155) (Max Maischein)
