--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for HTTP-Message
 
+{{$NEXT}}
+
 6.31      2021-05-11 18:07:37Z
     - Fix test writing to files (GH#156) (Michal Josef Špaček)
 
