--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
-    - Use File::Spec for MSWin32 on Content-Disposition filename (GH#157) (tzccinct)
+    - Use File::Spec for MSWin32 on Content-Disposition filename (GH#157)
+      (tzccinct)
 
 6.31      2021-05-11 18:07:37Z
     - Fix test writing to files (GH#156) (Michal Josef Špaček)
