--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for HTTP-Message
 
+{{$NEXT}}
+
 6.33      2021-06-28 16:51:58Z
     - Allow `can` method to respond to delegated methods (GH#159) (nanto_vi,
       TOYAMA Nao)
