--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - Catch case of empty name/value in header words split. (GH#168) (Galen Huntington)
 
 6.33      2021-06-28 16:51:58Z
     - Allow `can` method to respond to delegated methods (GH#159) (nanto_vi,
