Support for Brotli encoding
This commit adds encoding to the code written by trizen with #164, which
added decoding. It also adds tests.

Also makes sure recommended modules are installed during the Linux
github action build, which we were already doing on Mac.

Closes #163.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - Support for Brotli "br" encoding (GH#163) (trizen and Julien Fiegehenn)
     - Don't test Perl > 5.32 on Windows in GH Actions (GH#174) (Olaf Alders)
 
 6.36      2022-01-05 14:39:42Z
