--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for HTTP-Message
 
 {{$NEXT}}
     - Replace "base" with "parent" (GH#176) (James Raspass)
+    - Replace "print" with "note" in tests (GH#178) (James Raspass)
 
 6.37      2022-06-14 14:08:55Z
     - Support for Brotli "br" encoding (GH#163) (trizen and Julien Fiegehenn)
