--- a/Changes
+++ b/Changes
@@ -4,7 +4,7 @@ Revision history for HTTP-Message
     - Replace "base" with "parent" (GH#176) (James Raspass)
     - Replace "print" with "note" in tests (GH#178) (James Raspass)
     - Noted that OPTIONS supported was added in 6.1, to the doc
-      for HTTP::Request::Common. Addresses GH#177.
+      for HTTP::Request::Common. Addresses GH#177. (GH#179) (Neil Bowers)
 
 6.37      2022-06-14 14:08:55Z
     - Support for Brotli "br" encoding (GH#163) (trizen and Julien Fiegehenn)
