--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for HTTP-Message
 
+{{$NEXT}}
+
 6.38      2022-10-06 21:48:18Z
     - Replace "base" with "parent" (GH#176) (James Raspass)
     - Replace "print" with "note" in tests (GH#178) (James Raspass)
