--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - Remove Travis config (GH#180) (Olaf Alders)
 
 6.38      2022-10-06 21:48:18Z
     - Replace "base" with "parent" (GH#176) (James Raspass)
