--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for HTTP-Message
 
+{{$NEXT}}
+
 6.43      2022-10-22 14:50:35Z
     - Remove dependency to IO::Uncompress::Bunzip2. (Michal Josef Spacek)
     - Remove dependency to IO::Uncompress::Gunzip. (Michal Josef Spacek)
