--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - Allow for file ownership conflicts with Docker and GitHub Actions
+      (GH#193) (Olaf Alders)
 
 6.44      2022-10-26 20:49:00Z
     - Made the Clone module a hard requirement, so we don't have to
