--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for HTTP-Message
 
+{{$NEXT}}
+
 6.46      2024-05-27 18:58:16Z
     - Update several status codes to RFC 9110 (GH#197) (Wesley Schwengle)
 
