properly support an HTTP method of '0'
This is valid according to RFC9110: see
https://datatracker.ietf.org/doc/html/rfc9110#appendix-A for the full ABNF,
which is equivalent to the regex: ^[a-zA-Z0-9!#$%&'*+.^_`|~-]+$

This also matches the check in LWP::Protocol::http::request.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for HTTP-Message
 
 {{$NEXT}}
+    - now handling HTTP method '0' (Karen Etheridge)
 
 7.00      2024-10-07 15:31:56Z
     - Stop transforming LF into CRLF. Fixes #69 (GH#196) (Olaf Alders)
